--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Hobbies</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/index.css">
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLM2ZB2ZNR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-KLM2ZB2ZNR');
+</script>
+
+
 </head>
 <body>
 
@@ -67,24 +80,28 @@
       </ul>
 
 <section>
-    <img src="Images/Rectangle.png" width="600" height="520">
     <h1>How to get started</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque rutrum purus, vel tempus nibh viverra nec. In elementum, orci a tempus vestibulum, augue leo elementum enim, vel pretium lorem justo vitae risus. Maecenas in fringilla elit, a cursus risus. Sed eu ex vel neque pretium varius sit amet vel turpis. Aliquam interdum pellentesque cursus. Nunc sed ultricies ante. Curabitur blandit pharetra commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-    <p>Ut a nulla lacus. Proin condimentum leo et orci fermentum, eu pretium nunc sagittis. Vestibulum eu risus nec arcu semper consectetur at et mauris. Integer auctor pellentesque rhoncus. Vivamus congue erat justo, et mattis orci feugiat in. Nullam pretium sapien ac pellentesque imperdiet. In dignissim lobortis nisl. Donec gravida felis vel augue euismod, in interdum libero mattis. Donec feugiat ex sit amet odio placerat consectetur. Maecenas nec eleifend augue. Nulla posuere fringilla ornare.</p>
-    <p>Sed malesuada purus et venenatis cursus. Sed quam leo, tristique sodales ex at, vestibulum sagittis lorem. Mauris lacus lacus, ultricies eu elit sed, maximus consequat turpis. Praesent vitae lectus mi. Nunc euismod lacinia mi, non viverra nibh tempor nec.</p>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque lorem vel felis venenatis pharetra. Ut rutrum turpis eget neque sagittis tristique. Aenean non enim id turpis egestas placerat id suscipit augue. Nulla mattis semper egestas. Donec condimentum fermentum metus, sodales dapibus leo mollis eu. Quisque scelerisque massa eget ligula viverra pellentesque.</p>
-    <p>Cras tempor porttitor est non tincidunt. Vestibulum risus mauris, tempus ac ornare non, rutrum congue ligula. Morbi venenatis, sem quis pretium scelerisque, sapien eros blandit risus, eget egestas est metus eu mi. Duis vel nisl at augue auctor eleifend quis nec arcu. Suspendisse aliquet lacinia mauris, vel pretium leo varius rutrum. Pellentesque ut erat risus. Maecenas eget turpis tortor. Proin interdum faucibus euismod. Suspendisse ut justo et libero mollis suscipit. Phasellus eu iaculis ex. Curabitur vitae magna in lorem feugiat tristique quis in enim. Donec vitae egestas mauris. Donec erat est, pellentesque non fringilla sit amet, finibus a nisl. Quisque orci sem, tempor in sollicitudin eget, aliquam eget massa.</p>
-</section>
+    <img class="sidePic" src="Images/Rectangle.png" width="600" height="520">
+    <div class="allText">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque rutrum purus, vel tempus nibh viverra nec. In elementum, orci a tempus vestibulum, augue leo elementum enim, vel pretium lorem justo vitae risus. Maecenas in fringilla elit, a cursus risus. Sed eu ex vel neque pretium varius sit amet vel turpis. Aliquam interdum pellentesque cursus. Nunc sed ultricies ante. Curabitur blandit pharetra commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <p>Ut a nulla lacus. Proin condimentum leo et orci fermentum, eu pretium nunc sagittis. Vestibulum eu risus nec arcu semper consectetur at et mauris. Integer auctor pellentesque rhoncus. Vivamus congue erat justo, et mattis orci feugiat in. Nullam pretium sapien ac pellentesque imperdiet. In dignissim lobortis nisl. Donec gravida felis vel augue euismod, in interdum libero mattis. Donec feugiat ex sit amet odio placerat consectetur. Maecenas nec eleifend augue. Nulla posuere fringilla ornare.</p>
+      <p>Sed malesuada purus et venenatis cursus. Sed quam leo, tristique sodales ex at, vestibulum sagittis lorem. Mauris lacus lacus, ultricies eu elit sed, maximus consequat turpis. Praesent vitae lectus mi. Nunc euismod lacinia mi, non viverra nibh tempor nec.</p>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam scelerisque lorem vel felis venenatis pharetra. Ut rutrum turpis eget neque sagittis tristique. Aenean non enim id turpis egestas placerat id suscipit augue. Nulla mattis semper egestas. Donec condimentum fermentum metus, sodales dapibus leo mollis eu. Quisque scelerisque massa eget ligula viverra pellentesque.</p>
+      <p>Cras tempor porttitor est non tincidunt. Vestibulum risus mauris, tempus ac ornare non, rutrum congue ligula. Morbi venenatis, sem quis pretium scelerisque, sapien eros blandit risus, eget egestas est metus eu mi. Duis vel nisl at augue auctor eleifend quis nec arcu. Suspendisse aliquet lacinia mauris, vel pretium leo varius rutrum. Pellentesque ut erat risus. Maecenas eget turpis tortor. Proin interdum faucibus euismod. Suspendisse ut justo et libero mollis suscipit. Phasellus eu iaculis ex. Curabitur vitae magna in lorem feugiat tristique quis in enim. Donec vitae egestas mauris. Donec erat est, pellentesque non fringilla sit amet, finibus a nisl. Quisque orci sem, tempor in sollicitudin eget, aliquam eget massa.</p>
+    </div>
+  </section>
 
 <hr>
 
 <section>
     <h3>Other hobbies you may be interested in</h3>
+    <div class="hobbies">
     <img src="Images/RectangleSmall.png" width ="173" height="76">
     <img src="Images/RectangleSmall.png" width ="173" height="76">
     <img src="Images/RectangleSmall.png" width ="173" height="76">
     <img src="Images/RectangleSmall.png" width ="173" height="76">
     <img src="Images/RectangleSmall.png" width ="173" height="76">
+    </div>
 </section>
 
 
